--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                         <p class="card-text">A dashboard to analyze sales data with interactive charts and graphs.</p>
                         <ul>
                             <li>Technologies: Python, Power BI</li>
-                            <li>Features: Real-time data updates, user filters</li>
+                            <li>Features: Real-time data updates, customizable user filters for enhanced interactivity and analysis.</li>
                         </ul>
                         <a href="#" class="btn btn-primary">View Project</a>
                     </div>
